Fix color contrast

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -2,7 +2,7 @@
 	--font-body: 'Helvetica Neue', 'Open Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
 		Oxygen, Ubuntu, Cantarell, sans-serif;
 	--color-white: #ffffff;
-	--color-primary: #f42c04;
+	--color-primary: #DE3719;
 	--color-title: #111;
 	--color-text: #343434;
 	--color-text-light: #646464;
